Update audio URL for 'Serana For Revenge'

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         const songs = [
             { name: "Sedia aku sebelum hujan", url: "https://files.catbox.moe/7fevui.mp3" },
             { name: "Kamin Speed Up", url: "https://files.catbox.moe/o135pi.mp3" },
-            { name: "Serana For Revenge", url: "https://files.catbox.moe/o135pi.mp3" },
+            { name: "Serana For Revenge", url: "https://files.catbox.moe/1q7mw7.mp3" },
             { name: "Pura-pura Lupa", url: "https://files.catbox.moe/x1e4im.mp3" },
             { name: "Jakarta Hari Ini", url: "https://files.catbox.moe/flo2u3.mp3" }
         ];
