Revise paragraph text in index.html
Updated text content in the paragraph for clarity.

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             <div class="status-bar"><div class="dot"></div><span>SERVER: ONLINE</span></div>
             <h3 style="font-family: 'Orbitron'; font-size: 11px; color: var(--neon); margin-bottom:10px;">> <span id="type-target" class="typing-cursor"></span></h3>
             <p style="font-size: 14px; opacity: 0.8; line-height: 1.6; text-align: justify; margin-bottom: 15px;">
-                Seorang bocah SMP yang ingin menjadi developer alhamdulilah saya sudah mengerti bahasa pemrograman dasar.
+                Seorang bocah SMP yang ingin menjadi developer,alhamdulilah dia (banz) sudah mengerti bahasa pemrograman
             </p>
             
             <div class="skill-container">
