--- a/index.html
+++ b/index.html
@@ -406,6 +406,14 @@
 
         <div style="height: 100px;"></div>
     </div>
+    
+    <div id="nav" class="nav-bar">
+        <div class="nav-btn active-nav" id="n-home" onclick="navTo('home-page')">CORE</div>
+        <div class="nav-btn" id="n-project" onclick="navTo('project-page')">PROJECTS</div>
+        <div class="nav-btn" id="n-shop" onclick="navTo('shop-page')">STORE</div>
+    </div>
+         <div class="nav-btn" id="n-download" onclick="navTo('download-page')">PROJECTS</div>
+         
 
     <audio id="main-audio" loop></audio>
 
